--- a/Web.Statu/Content/GlobalSite.v1.5.css
+++ b/Web.Statu/Content/GlobalSite.v1.5.css
@@ -1495,6 +1495,7 @@ div.verticaltab-container {
 
     .highlighting highl {
         font-weight: bold;
+        background-color: #c5f74f;
     }
 
 
