--- a/Web.Statu/Views/Manage/ChangePhoto.cshtml
+++ b/Web.Statu/Views/Manage/ChangePhoto.cshtml
@@ -44,7 +44,7 @@
                     <input type="text" class="form-control" id="source" name="source" placeholder="Zdroj obrázku">
                     <p class="help-block">Napište URL, odkud fotka je anebo popis autorství. Nepoužívejte obrázky z neznámých zdrojů.</p>
                 </div>
-                <a href="@o.GetUrlOnWebsite(true)" class="btn btn-default">&lt;&lt; Zpět</a>
+                <a href="@o.GetUrl(true)" class="btn btn-default">&lt;&lt; Zpět</a>
                 <button type="submit" class="btn btn-success">Poslat</button>
             </form>
 
