--- a/Web.Statu/Views/Manage/ChangePhoto_finish.cshtml
+++ b/Web.Statu/Views/Manage/ChangePhoto_finish.cshtml
@@ -18,6 +18,6 @@
 <div class="row">
 
     <div class="col-xs-12">
-        <a href="@o.GetUrlOnWebsite()">Zpět na profil @o.FullNameWithYear()</a>
+        <a href="@o.GetUrl()">Zpět na profil @o.FullNameWithYear()</a>
     </div>
 </div>
