disable insolvence for a while
after merge fixes
small refactoring

--- a/Web.Statu/Views/Home/Hledat.cshtml
+++ b/Web.Statu/Views/Home/Hledat.cshtml
@@ -398,7 +398,7 @@ else if (Model.HasResults == false)
 							{
 								countRendered++;
 								var rec = item.Source;
-								@SearchResults.InsolvenceRow(User, Request, rec)
+								@SearchResults.InsolvenceRow(User, Request, rec, Model.Query)
 							}
 						</tbody>
 					</table>
