--- a/Web.Statu/Views/Insolvence/Rizeni.cshtml
+++ b/Web.Statu/Views/Insolvence/Rizeni.cshtml
@@ -1,5 +1,4 @@
 ﻿@model HlidacStatu.Lib.Data.Insolvence.InsolvenceDetail
-
 @using Nest;
 @using HlidacStatu.Lib;
 @using System.Linq;
@@ -7,7 +6,6 @@
 @using HlidacStatu.Web.Models;
 @using HlidacStatu.Lib.Data.Insolvence;
 @using G = HlidacStatu.Lib.Data
-
 @{
 
     ViewBag.Title = "Hlídač insolvencí";
@@ -16,9 +14,15 @@
     //ViewBag.SocialShareTitle = Model.NazevZakazky;
     //ViewBag.SocialShareText = Devmasters.Core.TextUtil.FormatPlainTextForArticle(Devmasters.Core.TextUtil.ShortenText(Model.PopisZakazky, 200));
 
+    var dluznici = Model.Rizeni.Dluznici.OrderBy(o => o.PlneJmeno).Select(o => new OsobaViewModel { Osoba = o });
+    var veritele = Model.Rizeni.Veritele.OrderBy(o => o.PlneJmeno).Select(o => new OsobaViewModel { Osoba = o });
+    var spravci = Model.Rizeni.Spravci.OrderBy(o => o.PlneJmeno).Select(o => new OsobaViewModel { Osoba = o });
+
+    Nest.HighlightFieldDictionary highlightingData = ViewBag.Highlighting as Nest.HighlightFieldDictionary;
+    bool highlighting = highlightingData?.Keys?.Contains("dokumenty.plainText") == true;
+
 
 }
-
 
 @section breadcrumb
 {
@@ -28,18 +32,14 @@
         <li class="active">@ViewBag.SubTitle</li>
     </ol>
 }
-
 <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
-
 @Html.Partial("_SearchForm", new HlidacStatu.Lib.ES.InsolvenceSearchResult())
-
 
 <h2>
     @*@Util.AddBookmark(this.User, Model)*@
     Insolvenční řízení @Model.Rizeni.SpisovaZnacka
 </h2>
-
 @if (!HlidacStatu.Web.Framework.LimitedAccess.IsAuthenticatedOrSearchCrawler(this.Request))
 {
     <h3>Omezený přístup pouze pro registrované uživatele.</h3>
@@ -61,29 +61,29 @@ else
 {
     @Html.Partial("_Status", new StavRizeniViewModel { Stav = Model.Rizeni.Stav })
 
-	<h3>Účastníci řízení</h3>
-	<div class="row">
-		<div class="col-sm-6 col-xs-12">
-			<h4>Dlužníci (@dluznici.Count())</h4>
-			@Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = dluznici, Typ = "D", ShowAsDataTable = true })
-
-			<br />
-
-			<h4>Správci (@spravci.Count())</h4>
-			@Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = spravci, Typ = "S", ShowAsDataTable = true })
-		</div>
-		<div class="col-sm-6 col-xs-12">
-			<h4>Věřitelé (@veritele.Count())</h4>
-			@Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = veritele, Typ = "V", ShowAsDataTable = true })
-		</div>
-	</div>
+    <h3>Účastníci řízení</h3>
+    <div class="row">
+        <div class="col-sm-6 col-xs-12">
+            <h4>Dlužníci (@dluznici.Count())</h4>
+            @Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = dluznici, Typ = "D", ShowAsDataTable = true })
+            <br />
+            <h4>Správci (@spravci.Count())</h4>
+            @Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = spravci, Typ = "S", ShowAsDataTable = true })
+        </div>
+        <div class="col-sm-6 col-xs-12">
+            <h4>Věřitelé (@veritele.Count())</h4>
+            @Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = veritele, Typ = "V", ShowAsDataTable = true })
+        </div>
+    </div>
 
     <h3 style="margin-top:50px">Informace o řízení</h3>
     <table class="table table-hover">
         <tbody>
             <tr>
                 <td>Soud</td>
-                <td>@Html.Partial("_Soud", new SoudViewModel { Soud = Model.Rizeni.Soud })</td>
+                <td>
+                    <span>@Model.Rizeni.SoudFullName()</span>
+                </td>
             </tr>
             <tr>
                 <td>Spisová značka</td>
@@ -92,7 +92,7 @@ else
             <tr>
                 <td>Aktuální stav</td>
                 <td>
-                    @Html.Partial("_StavRizeni", new StavRizeniViewModel { Stav = Model.Rizeni.Stav })
+                    <span title="@Model.Rizeni.StavRizeniDetail()">@Model.Rizeni.StavRizeni()</span>
                 </td>
             </tr>
             <tr>
@@ -146,57 +146,46 @@ else
         </tbody>
     </table>
 
-	<h3 style="margin-top:50px">Poslední dokumenty k řízení</h3>
-	<div>
-		@{var dokumentu = Model.Rizeni.Dokumenty.Count();}
-		<table class="table table-condensed table-striped">
-			<tbody>
-				@foreach (var item in Model.Rizeni.Dokumenty.OrderByDescending(d => d.DatumVlozeni).Take(10))
-				{
-					<tr>
-						<td>
-							@item.Popis
-						</td>
-						<td style="width:100px">
-							@item.DatumVlozeni.ToShortDateString()
-						</td>
-						<td style="width:50px">
-							<a href="@item.Url"><span class="glyphicon glyphicon-new-window"></span></a>
-						</td>
-					</tr>
-				}
-			</tbody>
-		</table>
-		<div class="text-right">
-			<a href="@Url.Action("Dokumenty", "Insolvence", new { id = Model.Rizeni.UrlId() })">Všechny dokumenty (@Model.Rizeni.Dokumenty.Count())</a>
-		</div>
-	</div>
-
-	<script>
-		$(function () {
-			$('[data-toggle="tooltip"]').tooltip()
-		})
-	</script>
-}
-                @foreach (var item in docs.OrderByDescending(o => o.Value ).ThenByDescending(d => d.Key.DatumVlozeni).Take(10))
-                {
-                <tr>
-                    <td>
-                        @item.Key.Popis
-                    </td>
-                    <td style="width:100px">
-                        @item.Key.DatumVlozeni.ToShortDateString()
-                    </td>
-                    <td style="width:50px">
-                        @if (item.Key.Lenght > 0)
+    <h3 style="margin-top:50px">Poslední dokumenty k řízení</h3>
+    <div>
+        @{var dokumentu = Model.Rizeni.Dokumenty.Count();}
+        <table class="table table-condensed table-striped">
+            <tbody>
+                @{
+                    Dictionary<Dokument, string> docs = new Dictionary<Dokument, string>();
+                    for (int i = 0; i < dokumentu; i++)
+                    {
+                        var doc = Model.Rizeni.Dokumenty[i];
+                        if (highlighting == false)
                         {
-                            <a href="@Url.Action("TextDokumentu", "Insolvence", new { Id = item.Key.Id, qs = this.Request.QueryString["qs"] })"><i class="far fa-lg fa-file-alt" alt="textová podoba dokumentu"></i></a>
+                            docs.Add(doc, null);
                         }
-                    </td>
-                    <td style="width:50px">
-                        <a href="@item.Key.Url" target="_blank"><i class="far fa-lg fa-file-pdf" alt="Originál"></i></a>
-                    </td>
-                </tr>
+                        else
+                        {
+                            docs.Add(doc, HlidacStatu.Web.Framework.Highlighter.HasHighlightedContent(highlightingData, "dokumenty.plainText", doc.PlainText) ? "1" : "0");
+                        }
+                    }
+
+                }
+                @foreach (var item in docs.OrderByDescending(o => o.Value).ThenByDescending(d => d.Key.DatumVlozeni).Take(10))
+                {
+                    <tr>
+                        <td>
+                            @item.Key.Popis
+                        </td>
+                        <td style="width:100px">
+                            @item.Key.DatumVlozeni.ToShortDateString()
+                        </td>
+                        <td style="width:50px">
+                            @if (item.Key.Lenght > 0)
+                            {
+                                <a href="@Url.Action("TextDokumentu", "Insolvence", new { Id = item.Key.Id, qs = this.Request.QueryString["qs"] })"><i class="far fa-lg fa-file-alt" alt="textová podoba dokumentu"></i></a>
+                            }
+                        </td>
+                        <td style="width:50px">
+                            <a href="@item.Key.Url" target="_blank"><i class="far fa-lg fa-file-pdf" alt="Originál"></i></a>
+                        </td>
+                    </tr>
                     if (highlighting && item.Value == "1")
                     {
                         <tr>
@@ -210,7 +199,7 @@ else
             </tbody>
         </table>
         <div class="text-right">
-            <a href="@Url.Action("Dokumenty", "Insolvence", new { id = Model.Rizeni.UrlId(), qs = this.Request.QueryString["qs"] })">Všechny dokumenty (@Model.Rizeni.Dokumenty.Count())</a>
+            <a href="@Url.Action("Dokumenty", "Insolvence", new { id = Model.Rizeni.UrlId() })">Všechny dokumenty (@Model.Rizeni.Dokumenty.Count())</a>
         </div>
     </div>
 
@@ -220,7 +209,6 @@ else
         })
     </script>
 }
-
 
 @section onlyembed
 {
