--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -68,20 +68,24 @@
                 <div>
                     <h2 class="new-title">
                         Podpořte nás
+                        <small><a target="_blank" href="https://www.darujme.cz/projekt/1200384">více info dárcovské kampani</a></small>
                     </h2>
                 </div>
                 <div>
-                    <div data-darujme-widget-token="lc07w7pgo6lw198i">&nbsp;</div>
+
+                    <div data-darujme-widget-token="bysxno1j5icb8vi6">&nbsp;</div>
                     <script type="text/javascript">
-	+function(w, d, s, u, a, b) {
-		w['DarujmeObject'] = u;
-		w[u] = w[u] || function () { (w[u].q = w[u].q || []).push(arguments) };
-		a = d.createElement(s); b = d.getElementsByTagName(s)[0];
-		a.async = 1; a.src = "https:\/\/www.darujme.cz\/assets\/scripts\/widget.js";
-		b.parentNode.insertBefore(a, b);
-	}(window, document, 'script', 'Darujme');
-	Darujme(1, "lc07w7pgo6lw198i", 'render', "https:\/\/www.darujme.cz\/widget?token=lc07w7pgo6lw198i", "550px");
+                        +function (w, d, s, u, a, b) {
+                            w['DarujmeObject'] = u;
+                            w[u] = w[u] || function () { (w[u].q = w[u].q || []).push(arguments) };
+                            a = d.createElement(s); b = d.getElementsByTagName(s)[0];
+                            a.async = 1; a.src = "https:\/\/www.darujme.cz\/assets\/scripts\/widget.js";
+                            b.parentNode.insertBefore(a, b);
+                        }(window, document, 'script', 'Darujme');
+                        Darujme(1, "bysxno1j5icb8vi6", 'render', "https:\/\/www.darujme.cz\/widget?token=bysxno1j5icb8vi6", "550px");
                     </script>
+
+
                 </div>
                 <div style="height: 56px"></div>
 
